# local_llm_server

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: demo_streaming.py
src/local_llm_serving/: config.py  main.py
src/local_llm_serving/agents/: ollama_agent.py  vllm_agent.py
src/local_llm_serving/server/: vllm_server.py
src/local_llm_serving/tools/: implementations.py  registry.py
tests/: catgirl  conftest.py  test_cat.py  test_code_interpreter_full.py  test_main.py  test_streaming.py
tex/: lec_02_agent_demo.tex  main.tmu
tex/_minted/: 2AB7F94FB2740803071CDB333B26F893.highlight.minted  _BA400F804EF225D918CB8918EDA3B736.index.minted
