[project]
name = "local-llm-serving"
version = "0.1.0"
description = "Universal Tool Calling Demo with vLLM and Ollama support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # vLLM and dependencies
    "vllm>=0.6.0",
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    # For demo tools
    "python-weather>=2.0.0",
    # For Ollama support
    "ollama>=0.1.0",
    # For additional tools
    "PyPDF2>=3.0.0",
    "pygments>=2.19.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.scripts]
llm-serve = "local_llm_serving.main:main"

[tool.uv]
package = true
